--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             Plantilla creadad desde 0.<br>Programación en JavaScript
                         </p>
                     </div>
-                    <a href="https://elmilloranime.blogspot.com/" class="btn">Ir al sitio Web</a>
+                    <a href="https://elmilloranime.blogspot.com/" target="_blank" class="btn">Ir al sitio Web</a>
                 </div>
             </div>
             <div class="carta">
@@ -45,7 +45,7 @@
                             Plantilla modificada en <br> iconos, fondos y textos.<br><br>Testeo de una plantilla.
                         </p>
                     </div>
-                    <a href="https://repacksnow.blogspot.com/" class="btn">Ir al sitio Web</a>
+                    <a href="https://repacksnow.blogspot.com/" target="_blank" class="btn">Ir al sitio Web</a>
                 </div>
             </div>
             <div class="carta">
@@ -59,7 +59,7 @@
                             Custom JavaScript para <br> hacer una cuenta regresiva<br> a una hora y una <br>fecha preselecionada.
                         </p>
                     </div>
-                    <a href="https://onepieceultimateproject.blogspot.com/" class="btn">Ir al sitio Web</a>
+                    <a href="https://onepieceultimateproject.blogspot.com/" target="_blank" class="btn">Ir al sitio Web</a>
                 </div>
             </div>
             <div class="carta">
@@ -73,7 +73,7 @@
                             Web diseñada a obtener los<br>recursos par crear<br>apariencias para el juego<br>Counter Strike<br>Global Offensive.
                         </p>
                     </div>
-                    <a href="https://mycsgoskins.blogspot.com/" class="btn">Ir al sitio Web</a>
+                    <a href="https://mycsgoskins.blogspot.com/" target="_blank" class="btn">Ir al sitio Web</a>
                 </div>
             </div>
             <div class="carta">
@@ -87,7 +87,7 @@
                             Mi primer blog serio<br>con mis 16 años.<br><br>Plantilla Custom.<br><br>Web de modificaciones<br>del juego Minecraft.
                         </p>
                     </div>
-                    <a href="https://raymonchek.blogspot.com/" class="btn">Ir al sitio Web</a>
+                    <a href="https://raymonchek.blogspot.com/" target="_blank" class="btn">Ir al sitio Web</a>
                 </div>
             </div>
             <div class="carta">
@@ -101,7 +101,7 @@
                             Mi primera plantilla.<br><br>Web enfocada a cazar el<br>mito de ordenadores caros.
                         </p>
                     </div>
-                    <a href="https://hablandodelpc.blogspot.com/" class="btn">Ir al sitio Web</a>
+                    <a href="https://hablandodelpc.blogspot.com/" target="_blank" class="btn">Ir al sitio Web</a>
                 </div>
             </div>
             <div class="carta">
@@ -115,7 +115,7 @@
                             Primer testeo con plantillas.
                         </p>
                     </div>
-                    <a href="https://solorepacks.blogspot.com/" class="btn">Ir al sitio Web</a>
+                    <a href="https://solorepacks.blogspot.com/" target="_blank" class="btn">Ir al sitio Web</a>
                 </div>
             </div>
             <div class="carta">
@@ -129,7 +129,7 @@
                             Mi primer contacto con<br>esta tecnologia a los 14 años.
                         </p>
                     </div>
-                    <a href="https://bellerahongria.blogspot.com/" class="btn">Ir al sitio Web</a>
+                    <a href="https://bellerahongria.blogspot.com/" target="_blank" class="btn">Ir al sitio Web</a>
                 </div>
             </div>
         </article>
