--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mi Portafolios: Génesis Lloret Ramos</title>
+    <title>Mi Portafolios - Génesis Lloret Ramos</title>
     <link rel="stylesheet" href="src/css/style.css">
     <script src="https://kit.fontawesome.com/785ad3e394.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
