--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <h1 class="titulo_autor">Génesis Lloret Ramos</h1>
         <h3 class="titulo_info">Portafolio de las Webs diseñadas, maquetadas y programadas</h3>
     </div>
+
+    <div class="contenedor">
+        <h2 class="contenedor_departamento">PROYECTOS CREADOS</h2>
+    </div>
+            <hr>
     <div class="contenedor">
         <h2 class="contenedor_departamento">B L O G G E R</h2>
         <article>
@@ -133,6 +138,7 @@
             </div>
         </article>
     </div>
+
 </body>
 
 </html>
