--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <h3 class="titulo_info">Portafolio de las Webs diseñadas, maquetadas y programadas</h3>
     </div>
 
-    <div class="contenedor">
-        <h2 class="contenedor_departamento">PROYECTOS CREADOS</h2>
+    <div class="">
+        <h2 class="">P R O Y E C T O S   C R E A D O S</h2>
+        
     </div>
             <hr>
     <div class="contenedor">
