--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </div>
     <div class="contenedor">
         <h2 class="contenedor_departamento">B L O G G E R</h2>
+    </div>
+    <hr>
+    <div class="contenedor">
+        <h2 class="contenedor_departamento">B L O G G E R</h2>
         <article>
             <div class="carta">
                 <img src="src/img/elmilloranime_home.png" class="carta_img" alt="Pagina inicio de la web" height="250px">
