--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h3 class="titulo_info">Portafolio de las Webs diseñadas, maquetadas y programadas</h3>
     </div>
     <div class="contenedor">
-        <h2 class="contenedor_departamento">B L O G G E R</h2>
+        <h2 class="contenedor_departamento">P R O J E C T O S  F U L L S T A C K</h2>
     </div>
     <hr>
     <div class="contenedor">
