--- a/index.html
+++ b/index.html
@@ -18,6 +18,27 @@
     </div>
     <div class="contenedor">
         <h2 class="contenedor_departamento">P R O J E C T O S &emsp; F U L L S T A C K</h2>
+        <article>
+            <div class="carta">
+                <img src="src/img/elmilloranime.online_web.png" class="carta_img" alt="Pagina inicio de la web" height="250px" id="ocultaralpasar1" >
+                <img src="src/img/elmilloranime.online_app.png" class="carta_img" alt="Pagina inicio de la web" height="250px">
+                <div class="card-body">
+                    <h5 class="card-title">ElMillorAnime.online</h5>
+                    <p class="card-text">
+                        </p>
+                    <div class="info">
+                        <i class="fas fa-info-circle info"></i>
+                        <p class="extrainfo">
+                            Aplicación creada con PHP, NodeJS, ElectronJS, MySQL, Google Apis, entre otras tecnológias.
+                            Registro Web con OTP.
+                            Contraseña encriptadas en MySQL.
+                            
+                        </p>
+                    </div>
+                    <a href="https://elmilloranime.blogspot.com/" class="btn">Ir al sitio Web</a>
+                </div>
+            </div>
+        </article>
     </div>
     <hr>
     <div class="contenedor">
@@ -139,5 +160,9 @@
         </article>
     </div>
 </body>
-
+<script>
+#ocultaralpasar1:hover {
+  display: none
+}
+</script>
 </html>
