--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             
                         </p>
                     </div>
-                    <a href="https://elmilloranime.blogspot.com/" class="btn">Ir al sitio Web</a>
+                    <a href="https://elmilloranime.online/" class="btn">Ir al sitio Web</a>
                 </div>
             </div>
         </article>
