--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <div class="card-body">
                     <h5 class="card-title">ElMillorAnime.online</h5>
                     <p class="card-text">
+                        Aplicación de escrito de visualización de anime en catalán online (sin animos de lucros).
                         </p>
                     <div class="info">
                         <i class="fas fa-info-circle info"></i>
@@ -31,7 +32,7 @@
                             Aplicación creada con PHP, NodeJS, ElectronJS, MySQL, Google Apis, entre otras tecnológias.
                             Registro Web con OTP.
                             Contraseña encriptadas en MySQL.
-                            
+                            Aplicación para Windows, MacOS, Linux, (proximamente Android & Ios)
                         </p>
                     </div>
                     <a href="https://elmilloranime.online/" class="btn">Ir al sitio Web</a>
