--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2 class="contenedor_departamento">P R O J E C T O S &emsp; F U L L S T A C K</h2>
         <article>
             <div class="carta">
-                <img src="src/img/elmilloranime.online_web.png" class="carta_img" alt="Pagina inicio de la web" height="250px" id="ocultaralpasar1" >
+                <img src="src/img/elmilloranime.online_web.gif" class="carta_img" alt="Pagina inicio de la web" height="250px" id="ocultaralpasar1" >
                 <div class="card-body">
                     <h5 class="card-title">ElMillorAnime.online</h5>
                     <p class="card-text">
