--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
                     <div class="info">
                         <i class="fas fa-info-circle info"></i>
                         <p class="extrainfo">
-                            Aplicación creada con PHP, NodeJS, ElectronJS, MySQL, Google Apis, entre otras tecnológias.
-                            Registro Web con OTP.
-                            Contraseña encriptadas en MySQL.
-                            Aplicación para Windows, MacOS, Linux, (proximamente Android & Ios)
+                            Aplicación creada con PHP, NodeJS,<br>
+                            ElectronJS, MySQL, Google Apis,<br>
+                            entre otras tecnológias.<br>
+                            Registro Web con OTP.<br>
+                            Contraseña encriptadas en MySQL.<br>
+                            Aplicación para Windows, <br>
+                            MacOS, Linux, <br>
+                            (proximamente Android & Ios)
                         </p>
                     </div>
                     <a href="https://elmilloranime.online/" class="btn">Ir al sitio Web</a>
