--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                 <div class="card-body">
                     <h5 class="card-title">ElMillorAnime.online</h5>
                     <p class="card-text">
-                        Aplicación de escrito de visualización de anime en catalán online (sin animos de lucros).
+                        Aplicación de escrito de <br>
+                        visualización de anime en <br>
+                        catalán online.<br>
+                        (sin animos de lucros).
                         </p>
                     <div class="info">
                         <i class="fas fa-info-circle info"></i>
